# chatbox-main

./: .gitignore  README.md  TEST.md  chatbox.db  pyproject.toml
agents/: chatbox_ai.py  chunking.py
postman/: README.md  chatbox.postman_collection.json
src/: main.py
src/api/: lifespan.py
src/api/models/: auth.py
src/api/routes/: __init__.py  auth.py  core.py  files.py
src/api/services/: auth.py  files.py
src/config/: settings.py
src/db/: database.py  models.py
src/utils/: chunking.py  file_operations.py  get_user.py  jwt.py  security.py  serializers.py
